--- a/packages/components/Icon/Icon.html
+++ b/packages/components/Icon/Icon.html
@@ -9,13 +9,15 @@
 ></div>
 
 <script>
+  import { neutral700 } from '@mamba/styles/colors.js';
+
   export default {
     data() {
       return {
         size: 'normal',
         symbol: 'custom',
         src: undefined,
-        color: undefined,
+        color: neutral700,
         width: undefined,
         height: undefined,
         level: undefined,
@@ -24,7 +26,7 @@
     computed: {
       iconStyle: ({ src, color, width, height }) =>
         [
-          color && `color:${color}`,
+          color && `color: ${color}`,
           /* istanbul ignore next */
           src && `-webkit-mask-image: url(${src})`,
           width && `width: ${width}`,
