fix: 🐛 camelcase props

--- a/packages/components/Dialog/Dialog.html
+++ b/packages/components/Dialog/Dialog.html
@@ -39,8 +39,8 @@
         /** Dialog open state */
         isOpen: false,
         title: undefined,
-        bgcolor: neutral50,
-        textcolor: neutral900,
+        bgColor: neutral50,
+        textColor: neutral900,
         align: 'center',
         fullscreen: false,
         className: undefined,
