--- a/packages/components/Icon/Icon.html
+++ b/packages/components/Icon/Icon.html
@@ -10,6 +10,8 @@
 
 <script>
   import { neutral700 } from '@mamba/styles/colors.js';
+  import getPxOf from './utils/getPxOf.js';
+
 
   export default {
     data() {
@@ -29,8 +31,8 @@
           color && `color: ${color}`,
           /* istanbul ignore next */
           src && `-webkit-mask-image: url(${src})`,
-          width && `width: ${width}`,
-          height && `height: ${height}`,
+          getPxOf('width', width),
+          getPxOf('height', height),
         ]
           .filter(Boolean)
           .join(';'),
