--- a/packages/components/Dialog/Dialog.html
+++ b/packages/components/Dialog/Dialog.html
@@ -3,12 +3,13 @@
     ref:_dialog
     class="dialog{_class}"
     class:is-fullscreen="fullscreen"
+    class:is-wide="wide"
     {style}
     tabindex="-1"
     data-freeze-keystrokes="{freezeKeystrokes}"
     on:keyup
   >
-    <div class="content -align-{align}">
+    <div class="content -align-{align}" style={_contentStyle}>
       <div class="message">
         {#if title}
           <div class="title">{title}</div>
@@ -43,11 +44,16 @@
         textColor: neutral900,
         align: 'center',
         fullscreen: false,
+        wide: false,
         className: undefined,
         freezeKeystrokes: true,
       };
     },
     computed: {
+      _contentStyle({ contentStyle = [] }) {
+        if(!Array.isArray(contentStyle)) return '';
+        return contentStyle.filter(Boolean).join(';');
+      },
       style({ bgColor, textColor }) {
         return [`background-color:${bgColor}`, `color:${textColor}`]
           .filter(Boolean)
@@ -186,25 +192,61 @@
       top: 0;
       z-index: $layer-dialog-fullscreen;
     }
+
+    &.is-wide {
+      .content {
+        width: 100%;
+      }
+    }
   }
 
-  .content {
+  .dialog:not(.is-wide) .content {
     width: 90%;
     text-align: center;
     margin-left: auto;
     margin-right: auto;
+
+    &.-align-center {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      text-align: center;
+    }
+  }
+
+  .is-wide {
+    .content {
+      &.-align-center {
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+    }
+
+    .message {
+      flex-grow: 1;
+    }
+
+    .extra {
+      flex: 0 1 auto;
+    }
+  }
+
+  .is-wide.is-fullscreen,
+  .is-wide.is-fullscreen .content {
+    flex: 1;
+  }
+
+  .is-wide,
+  .is-wide .content.-align-center {
+    display: flex;
+    flex-direction: column;
   }
 
   .content.-align-top {
     margin-top: 15px;
-  }
-
-  .content.-align-center {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
   }
 
   .message {
