--- a/packages/components/Dialog/Dialog.html
+++ b/packages/components/Dialog/Dialog.html
@@ -219,9 +219,13 @@
     .content {
       &.-align-center {
         text-align: center;
-        display: flex;
         justify-content: center;
-        align-items: center;
+
+        &,
+        .message {
+          display: flex;
+          align-items: center;
+        }
       }
     }
 
