--- a/packages/components/Dialog/WarningDialog.html
+++ b/packages/components/Dialog/WarningDialog.html
@@ -23,7 +23,7 @@
 <script>
   export default {
     components: {
-      WarningIcon: '@mamba/icon/specialized/Warning.html',
+      WarningIcon: '@mamba/icon/specialized-icons/Warning.html',
       ConfirmationDialog: './Confirmation.html',
     },
     data() {
@@ -49,7 +49,8 @@
 <style>
   .icon-box {
     border-radius: 3px;
-    margin: 40px 0 12px 0;
+    margin: 0 0 12px 0;
+    overflow: hidden;
   }
 
   h1 {
