refactor: 💡 update rebrand colors for confirmation buttons

--- a/packages/components/Icon/Round.html
+++ b/packages/components/Icon/Round.html
@@ -35,7 +35,7 @@
   .round-icon {
     display: inline-block;
     padding: 15px;
-    background-color: red;
+    background-color: $green500;
     text-align: center;
     line-height: 0;
   }
