--- a/packages/components/Dialog/Confirmation.html
+++ b/packages/components/Dialog/Confirmation.html
@@ -26,7 +26,12 @@
             </button>
           {:else}
             <div class="action" on:click="close('negative')" shortcut="close">
-              <RoundIcon symbol="close" size="giant" borderRadius="15px" bgColor={red600} />
+              <RoundIcon
+                symbol="close"
+                size="giant"
+                borderRadius="11px"
+                bgColor={red400}
+              />
             </div>
           {/if}
         </td>
@@ -43,7 +48,12 @@
             </button>
           {:else}
             <div class="action" on:click="close('positive')" shortcut="enter">
-              <RoundIcon symbol="check" size="giant" borderRadius="15px" bgColor={green500} />
+              <RoundIcon
+                symbol="check"
+                size="giant"
+                borderRadius="11px"
+                bgColor={green500}
+              />
             </div>
           {/if}
         </td>
@@ -54,7 +64,7 @@
 </Dialog>
 
 <script>
-  import { green500, red600 } from '@mamba/styles/colors';
+  import { green500, red400 } from '@mamba/styles/colors';
 
   export default {
     components: {
@@ -71,7 +81,7 @@
     },
     helpers: {
       green500,
-      red600,
+      red400,
     },
     computed: {
       _dialogProps: ({ positiveLabel, negativeLabel, primaryColor, ...props }) =>
