--- a/packages/pos/simulator/view/pos/ControlPanel.html
+++ b/packages/pos/simulator/view/pos/ControlPanel.html
@@ -62,8 +62,9 @@
   .panel-wrapper {
     width: 100vh;
     overflow: hidden;
-    color: #333;
+    color: $neutral700;
     user-select: none;
+    font-family: 'Sharon Sans', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica', 'Arial', sans-serif;
   }
 
   .panel-toggle {
@@ -155,16 +156,19 @@
       transition: background-color 0.3s ease;
     }
 
+    :global(input:not(.disable-effects)) {
+      background-color: #fff;
+      transition: background-color 0.3s ease;
+    }
+
     :global(textarea) {
-      background-color: #f5f7f7;
+      background-color: $green50;
     }
 
     :global(input) {
-      background-color: #fff;
-
       &:hover,
       &:focus {
-        background-color: #f5f7f7;
+        background-color: $green50;
       }
     }
 
