refactor: 💡 include POS on panel menu

--- a/packages/pos/simulator/view/pos/Wrapper.html
+++ b/packages/pos/simulator/view/pos/Wrapper.html
@@ -55,7 +55,7 @@
 </script>
 
 <style type="text/postcss">
-  @import '@mamba/styles/colors.pcss';
+  /* @import '@mamba/styles/colors.pcss'; */
   @import './style.pcss';
 
   @media (max-width: 400px) {
