--- a/packages/pos/simulator/view/pos/apps/Launcher.html
+++ b/packages/pos/simulator/view/pos/apps/Launcher.html
@@ -174,7 +174,7 @@
 </script>
 
 <style>
-  @import '@mamba/styles/colors.pcss';
+  /* @import '@mamba/styles/colors.pcss'; */
 
   :global(#apps-container) {
     height: 100%;
@@ -215,14 +215,14 @@
   }
 
   time {
-    color: $gray;
+    color: $neutral500;
     display: block;
     margin-top: 35px;
     font-size: 64px;
   }
 
   .merchant {
-    color: $black;
+    color: black;
     line-height: 1.2;
     font-size: 22px;
     margin: 8px 0 20px;
@@ -230,7 +230,7 @@
 
   .home {
     padding: 5px;
-    background-color: $gray-lighter;
+    background-color: $neutral300;
     font-size: 0;
   }
 
@@ -242,7 +242,7 @@
     vertical-align: middle;
     text-align: center;
     padding: 5px;
-    background-color: $white;
+    background-color: white;
     background-clip: content-box;
 
     &::before {
