--- a/packages/components/App/App.html
+++ b/packages/components/App/App.html
@@ -4,7 +4,7 @@
 />
 
 <div
-  class="mamba-app {device}"
+  class="mamba-app {model}"
   class:no-scroll="!scrollable"
   class:has-appbar="hasAppbar"
 >
@@ -16,7 +16,7 @@
 <script>
   import App from '@mamba/pos/api/app.js';
   import Keyboard from '@mamba/pos/api/keyboard.js';
-  import System from '@mamba/pos/api/system.js';
+  import { getPosModel } from '@mamba/utils';
 
   import {
     hasActiveHandlerFor,
@@ -38,7 +38,7 @@
         hideAppBar: false,
         askPasswordOnClose: false,
         doBeforeClose: false,
-        device: System.getPosModel(),
+        model: getPosModel(),
       };
     },
     oncreate() {
