--- a/packages/pos/simulator/view/pos/Card.html
+++ b/packages/pos/simulator/view/pos/Card.html
@@ -1,7 +1,7 @@
 <svelte:window on:keyup="_onKeyup(event)" />
 
 <div
-  class="credit-card {device}"
+  class="credit-card {$ACTIVE_MODEL}"
   class:is-inserted="isInserted"
   class:is-dragging="isDragging"
   class:is-above-screen="isAboveScreen"
@@ -18,7 +18,6 @@
         isInserted: false,
         isDragging: false,
         isAboveScreen: false,
-        device: View.getDevice(),
       };
     },
     oncreate() {
