fix: 🐛 fix trigger card

--- a/packages/pos/simulator/view/pos/Card.html
+++ b/packages/pos/simulator/view/pos/Card.html
@@ -10,9 +10,10 @@
 
 <script>
   import { HardwareManager } from '../../index.js';
-  import { View } from '../../index.js';
+  import store from './store.js';
 
   export default {
+    store: () => store,
     data() {
       return {
         isInserted: false,
