--- a/packages/pos/simulator/view/pos/panels/Models.html
+++ b/packages/pos/simulator/view/pos/panels/Models.html
@@ -26,7 +26,7 @@
     },
     methods: {
       setPosModel(model) {
-        this.store.setDevice(model)
+        this.store.setPosModel(model)
       },
     },
   };
