--- a/packages/pos/simulator/view/pos/hardware/Printer.html
+++ b/packages/pos/simulator/view/pos/hardware/Printer.html
@@ -213,4 +213,9 @@
     padding: 20px 21px 15px 20px;
     filter: contrast(300%) grayscale(100%) url(#remove-colors-alpha);
   }
+
+  :global(.MP35P .printer) {
+    left: 85px;
+    bottom: 620px;
+  }
 </style>
