--- a/packages/pos/simulator/view/pos/panels/Models.html
+++ b/packages/pos/simulator/view/pos/panels/Models.html
@@ -20,7 +20,7 @@
     store: () => store,
     data() {
       return {
-        MODELS: ['S920', 'MP35P'],
+        MODELS: ['S920', 'GERTEC - MP35P'],
       };
     },
     methods: {
