--- a/packages/components/Flatlist/Flatlist.html
+++ b/packages/components/Flatlist/Flatlist.html
@@ -26,6 +26,8 @@
 
         {#if separator}
           <svelte:component this="{separator}"/>
+          {:else}
+            <div class="separator"></div>
         {/if}
       {/if}
     {/each}
@@ -120,7 +122,7 @@
       font-size: 1.2rem;
     }
   }
-  /* .separator {
+  .separator {
     margin-bottom: 15px;
-  } */
+  }
 </style>
