--- a/packages/components/Flatlist/Flatlist.html
+++ b/packages/components/Flatlist/Flatlist.html
@@ -41,7 +41,7 @@
 
   export default {
     components: {
-      Parent: './parent.html',
+      Parent: './components/parent.html',
     },
     data() {
       return {
