--- a/packages/components/Flatlist/components/parent.html
+++ b/packages/components/Flatlist/components/parent.html
@@ -1,4 +1,4 @@
-<div ref:element>
+<div ref:element on:click>
   <svelte:component this="{renderItem}" key={key} {...data} bind:isActive />
 </div>
 
