--- a/packages/components/Flatlist/example/Line.html
+++ b/packages/components/Flatlist/example/Line.html
@@ -1,4 +1,3 @@
-
 <Row label={label} shortcut={shortcut} bgColor="{isActive ? '#DDE2E9' : '#fff'}" />
 
 <script>
@@ -13,3 +12,10 @@
     },
   };
 </script>
+
+<style type="text/postcss">
+  .app-shortcut {
+    color: $green500;
+  }
+
+</style>
